--- a/style.css
+++ b/style.css
@@ -9,11 +9,6 @@ body{
     /* * espaçamento externo */
 }
 
-h1{
-    margin: 50px;
-    padding: 30px ;
-    border-radius: 20px;
-}
 main{
     background-color: rgb(244, 142, 95);
     padding: 20px;
@@ -21,10 +16,18 @@ main{
 .cabecalho{
     background-color: rgb(84, 62, 52);
     margin: 0;
-    padding: 40px;
+    padding: 20px;
+    display: flex;
+    align-items: center; 
+    /* * Alinha os itens verticalmente */
+    justify-content: space-between
+    /* * Alinha os itens horizontalmente */
+
 }
 
 a{
     color: white;
     padding: 24px;
+    font-size: 24px;
+    text-decoration: none;
 }
